# VENEXT-APP

./: .env.example  .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.workspace.ts
apps/backoffice-web/: package-lock.json  package.json
apps/desktop-edge-sync/: index.html  package.json  tsconfig.json
apps/desktop-edge-sync/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-edge-sync/src-tauri/capabilities/: default.json
apps/desktop-edge-sync/src-tauri/src/: conflict.rs  main.rs  sqlite_store.rs  sync_engine.rs
apps/industrial-web/: README.md
apps/mobile-detaillant/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/mobile-grossiste-b/: index.html  package-lock.json  package.json  vitest.config.ts
apps/mobile-retailer-wholesaler-flutter/: analysis_options.yaml  pubspec.yaml
apps/mobile-terrain-shell/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web-grossiste-a/: CANONICAL.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web-industrial-nextjs/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
docs/: conversation-security-trust-model.md
docs/api-contracts/: domain-event.sample.json
docs/architecture/: ENTERPRISE-GOVERNANCE-API-MAP.md  INSTRUCTION_10_GOVERNANCE_BACKOFFICE.md  INSTRUCTION_9B_STABILIZATION.md  ai-gateway.md  commercial-corridor-governance.md  (+62 more)
prisma/: schema.prisma  seed.ts
scripts/: commerce-bootstrap.ts  commerce-reset.ts  commerce-seed.ts  migrate-industrial-loaders.mjs
(+2688 files in other folders)
